--- a/web/static/modal.css
+++ b/web/static/modal.css
@@ -26,7 +26,7 @@
   left: 0;
   right: 0;
   margin: 0 auto;
-  width: min(1200px, calc(100vw - 24px));
+  width: min(1200px, calc(100% - 24px));
   max-height: 92vh;
   overflow: hidden;
   display: flex;
